Fix overflow for min width 651px

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -200,6 +200,9 @@ body {
   .active {
     display: none;
   }
+  .lock {
+    overflow: scroll;
+  }
 }
 
 @media (max-width: 650px) {
