--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -115,6 +115,10 @@
   .active {
     display: none;
   }
+  
+  .lock {
+    overflow: scroll;
+  }
 }
 
 @media (max-width: 650px) {
